=== HEAD

* The :on_update and :on_delete entries for foreign key can now take strings, which are used literally (jeremyevans)

* Add Database#convert_infinite_timestamps to the postgres adapter, can be set to :nil, :string, or :float (jeremyevans) (#454)

* Add Database#create_join_table and #drop_join_table for easily creating many-to-many join tables (jeremyevans)

* Fix Dataset#group_rollup/#group_cube on Microsoft SQL Server 2005 (jeremyevans)

* Add Dataset#explain on MySQL (jeremyevans)

* Change formatting and return value of Dataset#explain on SQLite (jeremyevans)

* Recognize unsigned tinyint types in the schema dumper (jeremyevans)

* Add null_dataset extension, for creating a dataset that never issues a database query (jeremyevans)

* Database#uri and #url now return nil if a connection string was not used when connecting (jeremyevans) (#453)

* Add schema_caching extension, to speed up loading a large number of models by loading cached schema information from a file (jeremyevans)

* Add Dataset#multi_replace on MySQL, allowing you to REPLACE multiple rows in a single query (danielb2) (#452)

* Double speed of Model#new with empty hash, and quadruple speed of Model#set with empty hash (jeremyevans)

* Allow SQL::QualifiedIdentifier objects to contain arbitrary Sequel expressions (jeremyevans)

* Add pg_hstore_ops extension, for easily calling PostgreSQL hstore functions and operators (jeremyevans)

* Add Sequel::SQL::Wrapper class for easier dealing with wrapper objects (jeremyevans)

* Add pg_hstore extension, for dealing with the PostgreSQL hstore (key/value table) type (jeremyevans)

* Add Database#type_supported? method on PostgreSQL for checking if the given type symbol/string is supported (jeremyevans)

* Convert Java::OrgPostgresqlUtil::PGobject instances to ruby strings in jdbc/postgres type conversion (jeremyevans)

* Allow PlaceholderLiteralString objects to store placeholder string as an array for improved performance (jeremyevans)
